Change pao button to fix contrast error

--- a/assets/memoryTips.css
+++ b/assets/memoryTips.css
@@ -198,9 +198,8 @@ nav {
 }
 
 #PDFButton {
-    margin-left: 3%;
     width: fit-content;
-    font-size: 2rem;
+    font-size: 2.8rem;
     font-family: 'Lusitana', serif;
     color: #ffffff !important;
     text-shadow: -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000, 1px 1px 2px #000;
@@ -226,13 +225,12 @@ button {
     padding: 0 !important;
 }
 
-#button-div {
+#button-div2 {
     position: relative;
     bottom: -3px;
     margin-top: 0px;
     margin-bottom: 20px;
     text-align: center;
-    left: -23px;
     width: 100%;
     color: #fafafa;
 }
